OOT-1740: Project page - done project page content generation and rendering - covered by tests - also covered by test main part of the default Controller - created abstract class for tests, that have load fixtures logic and can authenticate - improved Twig macros related to the blocks generation, in order to allow to configure columns output - added macro for project anchor generation

--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -3,6 +3,10 @@ body {
     padding-bottom: 30px;
 }
 
+.single_project .jumbotron p {
+    font-size: 17px;
+}
+
 body.login {
     padding-top: 40px;
     padding-bottom: 40px;
